--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ganache-core": "2.2.1",
     "ipfs": "^0.31.7",
     "ipfs-api": "^24.0.1",
+    "mocha": "^5.2.0",
     "oauth": "^0.9.15",
     "prettier": "^1.14.2",
     "react": "^16.4.2",
